fixed query in getMovieRange() to only return movies with covers since it is for cover view, removed bad formed query

--- a/www/themes/light/styles/style.css
+++ b/www/themes/light/styles/style.css
@@ -527,7 +527,7 @@ site wide covers and images with dropshadows
 img.shadow { padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #777; -webkit-box-shadow: 3px 6px 8px -4px #777; box-shadow: 3px 6px 8px -4px #777; border-collapse:separate; }
 img.movshadow { width:160px; border:0; padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #777; -webkit-box-shadow: 3px 6px 8px -4px #777; box-shadow: 3px 6px 8px -4px #777; border-collapse:separate; }
 div.movbackground { background-size: cover; height:340px; }
-div.movoverlay { height:330px; background-color: rgba(224, 239, 249, 0.8); padding: 5px }
+div.movoverlay { height:330px; background-color: rgba(224, 239, 249, 0.8); padding: 5px; position: relative; }
 
 /*
 mainly one-off styles used on individual pages
@@ -562,7 +562,7 @@ div.resextra div.admin { float:right; }
 div.resextra div.btns {float:left; }
 
 div.movextra { padding-top:5px; color: #888; font-size: 0.9em; }
-div.movextra td {border:0; padding:0 0 10px 0}
+div.movextra td {border:0; padding:0 0 10px 0; }
 div.movextra tr.mlextra {display:none;}
 
 div.movcover {
